[metadata]
name = pytest-ansible-network-integration
description = A pytest plugin for running network integration tests within an ansible collection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ansible-network/pytest-ansible-network-integration
author = Bradley A. Thornton
author_email = bthornto@redhat.com
license = GNU GPL v3.0
license_file = LICENSE

classifiers =
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing

[options]
install_requires =
    ansible-navigator
    ansible-pylibssh
    cmlutils
    pytest
    virl2-client
    xmltodict


package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.extras_require]
test =
    darglint
    flake8-docstrings
    pre-commit
    pytest-cov

[options.entry_points]
pytest11 =
    ansible-network-integration=pytest_ansible_network_integration

[options.packages.find]
where = src
